tests/macros/duplicate/choices.stderr
error: duplicate option `choices`
 --> $DIR/choices.rs:4:9
  |
4 |         choices: todo!(),
  |         ^^^^^^^
