tests/macros/duplicate/choices.rs
fn main() {
    let q = inquisition::questions![list {
        choices: todo!(),
        choices: todo!(),
    }];
}
